@@ -1,6 +1,8 @@
 Current Release
 - Fixed view handling of ListRecordsByCidrBlock
 - Fixed RemoveRecord in core
+- Added new acl_ranges table in db.
+- Removed UpdateACL and added RemoveCIDRBlock
 
 2010-01-27 release-0.11
 - Fixed SOA incrementing problem.
