@@ -2,6 +2,7 @@ Current Release
 - Reordered records in zone_importer_lib so SOA comes first
 - Fixed bug that was making an extra any view dependency in zone_importer_lib
 - Added duplicate record checking in zone_exporter_lib
+- Fixed tree exporter to work with new acl_range table
 
 2010-01-27 release-0.11
 - Added missing named conf error in tree_exporter.py
